# odc-stac

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: codecov.yml
.github/workflows/: build-binder.yml  main.yml  publish-pypi.yml  publish-s3.yml  render.yml
binder/: README.md  apt.txt  environment.yml  postBuild  render-nb-pipe.sh  start
binder/_home/.config/dask/: dask.yaml  labextension.yaml
binder/_home/.jupyter/lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
binder/_home/.jupyter/lab/workspaces/: demo-2a97.jupyterlab-workspace
dea/index/: _index.py
docs/: .gitignore  Makefile  api.rst  benchmarking.rst  conf.py  examples.rst  index.rst  intro.rst  rtd-requirements.txt  stac-best-practice.rst  stac-load-e84-aws.py  stac-vs-odc.rst
docs/_static/: xr-fixes.css
docs/samples/: save-cog-from-stac.py
libs/index/: README.md  setup.cfg  setup.py
libs/index/odc/index/: __init__.py  _eo3.py  _grouper.py  _index.py  _utm.py  _uuid.py  _version.py  _yaml.py  stac.py
libs/index/odc/index/data/: ard_ls5.yaml  ard_ls7.yaml  l1_ls5.yaml  l1_ls8.yaml  metadata_eo3.yaml
libs/index/odc/stac/: __init__.py  _eo3.py
libs/index/tests/: conftest.py  test_stac.py  test_stac_transform.py
libs/index/tests/data/: LC08_L2SR_081119_20200101_20200823_02_T2.json  S2A_28QCH_20200714_0_L2A.json  S2A_28QCH_20200714_0_L2A.odc-metadata.json  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.odc-metadata.yaml  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.stac-item.json
notebooks/: .gitignore  Makefile  README.md  Welcome.md  build.sh  get_product_config.py  render-html.sh  render-nb.sh  stac-load-S2-deafrica.py  stac-load-S2-ms.py  stac-load-e84-aws.py  stac-load-ls8-ls9-geomad-deafrica.py
odc/index/: __init__.py  _grouper.py  _index.py  _utm.py  _uuid.py  _yaml.py  stac.py
odc/index/data/: ard_ls8.yaml  l1_ls7.yaml  l1_ls8.yaml
odc/loader/: __init__.py  _aws.py  _builder.py  _driver.py  _reader.py  _rio.py  test_builder.py  test_driver.py  test_reader.py  test_types.py  test_utils.py  test_utils_aws.py  types.py
odc/loader/testing/: fixtures.py
odc/stac/: __init__.py  _dask.py  _dcload.py  _eo3.py  _eo3converter.py  _load.py  _load_tmp.py  _mdtools.py  _model.py  _reader.py  _rio.py  _stac_load.py  _utils.py  _version.py  bench.py  model.py  transform.py
odc/stac/bench/: __init__.py  __main__.py  _cli.py  _prepare.py  _report.py  _run.py
odc/stac/eo3/: __init__.py  _dcload.py  _eo3converter.py
odc/stac/loader/: __init__.py  _builder.py  _dask.py  _driver.py  _reader.py  _rio.py  _utils.py  test_dask.py  test_reader.py  types.py
odc/stac/loader/testing/: fixtures.py
odc/stac/testing/: __init__.py  fixtures.py  stac.py
scripts/: mk-pip-tree.sh  notebook_hash.py  patch_version.py
tests/: conftest.py  test-env-py310.yml  test-env-py38.yml  test_bench.py  test_dask.py  test_dc_load.py  test_eo3converter.py  test_index_tools.py  test_load.py  test_mdtools.py  test_model.py  test_reader.py  test_stac_eo3.py  test_stac_transform.py  test_utils.py  test_utils_aws.py  test_utm.py
tests/common/: __init__.py
tests/data/: LC08_L2SP_028030_20200114_20200824_02_T1_SR.json  LC08_L2SR_081119_20200101_20200823_02_T2.json  LE07_L2SP_044033_20210329_20210424_02_T1_SR.json  S2A_28QCH_20200714_0_L2A.json  S2B_MSIL2A_20190629T212529_R043_T06VVN_20201006T080531.json  S2B_MSIL2A_20190629T212529_R043_T06VVN_20201006T080531_raster_ext.json  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.odc-metadata.yaml  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.stac-item.json  lidar_dem.json  only_crs_proj.json  sentinel-2-l2a.collection.json  site1-20200606-tall-strip-africa.geojson  site2-2020_jun_jul-35MNM.geojson  test-product-eo.yml  test-product-eo3.yml
tests/notebooks/: bench-prep-query.py  bench-runner.py
