[build-system]
requires = ["setuptools>=51.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
allow_redefinition = true

[tool.coverage.run]
omit = [
  "tests/*",
  "*/test_*"
]

[tool.isort]
profile = "black"

[tool.pylint.messages_control]

max-line-length = 120
max-args = 10

disable = [
  "missing-function-docstring",
  "invalid-name",
  "fixme",
  "wrong-import-order",
  "duplicate-code",
  "ungrouped-imports",
]
