[metadata]
name = odc-stac
description = Tooling for converting STAC metadata to ODC data model
version = attr: odc.stac._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require =
    pytest
    deepdiff

install_requires =
    affine
    datacube>=1.8.5 # need hashable GeoBox
    jinja2
    numpy
    odc-io
    pandas
    pystac>=1.0.0,<2
    toolz
    xarray

[options.packages.find]
include =
  odc*
