[metadata]
name = odc-stac
description = Tooling for converting STAC metadata to ODC data model
version = attr: odc.stac._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/x-rst
long_description = file: README.rst
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/
project_urls =
   Documentation = https://odc-stac.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/opendatacube/odc-tools/issues

classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require =
    pytest
    deepdiff

install_requires =
    affine
    datacube>=1.8.5 # need hashable GeoBox
    jinja2
    numpy
    odc-io
    pandas
    pystac>=1.0.0,<2
    toolz
    xarray

[options.packages.find]
include =
  odc*

[options.package_data]
* =
  *.yaml
  *.yml