[metadata]
name = odc-stac
description = Tooling for converting STAC metadata to ODC data model
version = attr: odc.stac._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/x-rst
long_description = file: README.rst
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-stac/
project_urls =
   Documentation = https://odc-stac.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/opendatacube/odc-stac/issues

classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
    Typing :: Typed

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.8
tests_require =
    pytest
    deepdiff

install_requires =
    affine
    odc-geo>=0.3.0
    rasterio>=1.0.0,!=1.3.0,!=1.3.1
    dask[array]
    numpy>=1.20.0
    pandas
    pystac>=1.0.0,<2
    toolz
    xarray>=0.19
  
[options.extras_require]
botocore = botocore

[options.packages.find]
include =
  odc*

[options.package_data]
odc.stac =
  py.typed
odc.loader =
  py.typed
